--- a/notetabook.html
+++ b/notetabook.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Note Overlay</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="libs/tailwind.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="libs/quill.snow.css" rel="stylesheet">
     <style>
         /* Define custom CSS variables for themes and global styles */
         :root {
@@ -692,10 +692,10 @@
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/turndown/dist/turndown.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="libs/marked.min.js"></script>
+    <script src="libs/turndown.min.js"></script>
+    <script src="libs/sortable.min.js"></script>
+    <script src="libs/quill.js"></script>
     <script>
         // ==UserScript==
         // @name        Ultimate Note Overlay – Hermes Edition
