--- a/notetabook.html
+++ b/notetabook.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Note Overlay</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="libs/tailwind.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="libs/quill.snow.css" rel="stylesheet">
     <style>
         /* Define custom CSS variables for themes and global styles */
         :root {
@@ -180,8 +180,8 @@
             color: var(--hermes-button-text);
         }
 
-        /* Workspaces (Notes and Code) */
-        #notesWorkspace, #codeWorkspace {
+        /* Workspaces (Notes, Code and Tools) */
+        #notesWorkspace, #codeWorkspace, #toolsWorkspace {
             flex: 1;
             display: flex;
             min-height: 0;
@@ -201,6 +201,31 @@
         #codeEditorContainer {
             flex: 1;
             min-height: 0;
+        }
+
+        /* Tools Workspace styling */
+        #toolsWorkspace h3 {
+            font-size: 1.2em;
+            font-weight: bold;
+            color: var(--hermes-primary);
+        }
+        #toolsWorkspace input {
+            width: 100%;
+            padding: 8px;
+            margin-top: 4px;
+            border-radius: 6px;
+            border: 1px solid var(--hermes-input-border);
+            background: var(--hermes-input-bg);
+            color: var(--hermes-input-text);
+        }
+        #toolsWorkspace pre {
+            background: var(--hermes-input-bg);
+            color: var(--hermes-input-text);
+            border: 1px solid var(--hermes-input-border);
+            border-radius: 6px;
+            padding: 8px;
+            min-height: 32px;
+            white-space: pre-wrap;
         }
 
         /* Media query for smaller screens */
@@ -639,6 +664,7 @@
             <div id="tabBar">
                 <div id="notesTab" class="tab-button active">Notes</div>
                 <div id="codeTab" class="tab-button">Code</div>
+                <div id="toolsTab" class="tab-button">Tools</div>
             </div>
             <div id="notesWorkspace" class="flex flex-1">
                 <div id="sidebar">
@@ -676,6 +702,19 @@
                 </div>
                 <div id="codeEditorContainer"></div>
             </div>
+            <div id="toolsWorkspace" class="hidden flex-1 overflow-y-auto p-4 space-y-6">
+                <div>
+                    <h3 class="mb-2 font-bold">Ping Test</h3>
+                    <input id="pingInput" placeholder="Hostname or URL" />
+                    <button id="pingBtn" class="hermes-btn mt-2">Ping</button>
+                    <pre id="pingResult" class="mt-2"></pre>
+                </div>
+                <div>
+                    <h3 class="mb-2 font-bold">GUID Generator</h3>
+                    <button id="generateGuidBtn" class="hermes-btn">Generate GUID</button>
+                    <input id="guidOutput" readonly class="mt-2" />
+                </div>
+            </div>
         </div>
 
         <div id="customModal" class="hidden">
@@ -692,10 +731,10 @@
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/turndown/dist/turndown.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="libs/marked.min.js"></script>
+    <script src="libs/turndown.min.js"></script>
+    <script src="libs/sortable.min.js"></script>
+    <script src="libs/quill.js"></script>
     <script>
         // ==UserScript==
         // @name        Ultimate Note Overlay – Hermes Edition
@@ -825,6 +864,15 @@
             const addFileBtn = document.getElementById('addFileBtn');
             const fileList = document.getElementById('fileList');
             const codeEditorContainer = document.getElementById('codeEditorContainer');
+
+            // Tools workspace elements
+            const toolsTab = document.getElementById('toolsTab');
+            const toolsWorkspace = document.getElementById('toolsWorkspace');
+            const pingInput = document.getElementById('pingInput');
+            const pingBtn = document.getElementById('pingBtn');
+            const pingResult = document.getElementById('pingResult');
+            const generateGuidBtn = document.getElementById('generateGuidBtn');
+            const guidOutput = document.getElementById('guidOutput');
 
             // Modal Elements
             const customModal = document.getElementById('customModal');
@@ -1443,6 +1491,36 @@
                 });
             }
 
+            // --- Tools Workspace Functions ---
+            function pingHost() {
+                const host = pingInput.value.trim();
+                if (!host) {
+                    pingResult.textContent = 'Enter a host to ping.';
+                    return;
+                }
+                pingResult.textContent = 'Pinging...';
+                const start = Date.now();
+                fetch((host.startsWith('http') ? host : 'https://' + host), { mode: 'no-cors', method: 'GET' })
+                    .then(() => {
+                        const ms = Date.now() - start;
+                        pingResult.textContent = `Success: ${ms} ms`;
+                    })
+                    .catch(() => {
+                        pingResult.textContent = 'Failed to reach host';
+                    });
+            }
+
+            function generateGuid() {
+                const guid = (typeof crypto !== 'undefined' && crypto.randomUUID) ? crypto.randomUUID() : 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, c => {
+                    const r = Math.random() * 16 | 0, v = c === 'x' ? r : (r & 0x3 | 0x8);
+                    return v.toString(16);
+                });
+                guidOutput.value = guid;
+                guidOutput.select();
+                document.execCommand('copy');
+                pingResult.textContent = '';
+            }
+
             function switchTab(tab) {
                 // Save content of the *currently active* editor before switching
                 if (!notesWorkspace.classList.contains('hidden') && currentSectionName !== null && currentPageIndex !== null) { // Currently on notes tab, and a page is open
@@ -1454,7 +1532,9 @@
                 if (tab === 'code') {
                     notesWorkspace.classList.add('hidden');
                     codeWorkspace.classList.remove('hidden');
+                    toolsWorkspace.classList.add('hidden');
                     notesTab.classList.remove('active');
+                    toolsTab.classList.remove('active');
                     codeTab.classList.add('active');
                     loadMonaco().then(() => { // Ensure Monaco is loaded
                         if (currentFileName) { // If a file was previously open, load it
@@ -1468,10 +1548,19 @@
                             codeEditorContainer.innerHTML = '<p style="text-align: center; padding-top: 50px;">Select a file or add a new one to start coding.</p>';
                         }
                     });
+                } else if (tab === 'tools') {
+                    notesWorkspace.classList.add('hidden');
+                    codeWorkspace.classList.add('hidden');
+                    toolsWorkspace.classList.remove('hidden');
+                    notesTab.classList.remove('active');
+                    codeTab.classList.remove('active');
+                    toolsTab.classList.add('active');
                 } else { // Switch to notes tab
                     codeWorkspace.classList.add('hidden');
+                    toolsWorkspace.classList.add('hidden');
                     notesWorkspace.classList.remove('hidden');
                     codeTab.classList.remove('active');
+                    toolsTab.classList.remove('active');
                     notesTab.classList.add('active');
                     // Re-enable Quill if a page is selected and not locked, or clear editor if no page is selected
                     if (currentSectionName !== null && currentPageIndex !== null) {
@@ -1508,6 +1597,9 @@
                                     codeEditorContainer.innerHTML = '<p style="text-align: center; padding-top: 50px;">Select a file or add a new one to start coding.</p>';
                                 }
                             });
+                        } else if (toolsTab.classList.contains('active')) {
+                            pingResult.textContent = '';
+                            guidOutput.value = '';
                         }
                     }
                 };
@@ -1561,6 +1653,9 @@
 
                 notesTab.onclick = () => switchTab('notes');
                 codeTab.onclick = () => switchTab('code');
+                toolsTab.onclick = () => switchTab('tools');
+                pingBtn.onclick = pingHost;
+                generateGuidBtn.onclick = generateGuid;
                 addFileBtn.onclick = () => {
                     showModal('New File', 'Enter file name:', true, (name) => {
                         if (name && name.trim() !== '') {
