--- a/CEC_Toolkit_Working_REBUILT.html
+++ b/CEC_Toolkit_Working_REBUILT.html
@@ -84,6 +84,11 @@
                       <i class="material-icons left">play_circle</i>Generate Escalation Template
                     </button>
                   </div>
+                  <div class="center-align" style="margin-top: 12px;">
+                    <button class="btn grey lighten-1 black-text" onclick="clearEscalationFields()">
+                      <i class="material-icons left">clear</i>Clear Fields
+                    </button>
+                  </div>
                   <div class="input-field" style="margin-top: 24px;">
                     <textarea id="cecEscalationOutput" class="materialize-textarea" rows="12" readonly></textarea>
                     <label for="cecEscalationOutput">Escalation Output</label>
@@ -208,18 +213,43 @@
       const workHours = workHoursMatch ? workHoursMatch[1].trim() : "";
       output.push("Work Hours (HH:MM EST/HH:MM EST D-D): " + (workHours || USER_NOT_PROVIDED));
       
-      // Building: Prioritize "Address:" from people record, then from notes. Handle "Working from home" explicitly.
-      let building = extract(/^Address:\s*(.+)/im, peopleRecordText); 
-      if (building && building.toLowerCase().includes("home office")) { 
-        const workingFromHomeNote = extract(/Are you working from home.*?:\s*(.+)$/im, notesText);
-        if (workingFromHomeNote && workingFromHomeNote.toLowerCase().includes("working from home")) {
-          building = "Working from home"; 
+      // Building: derive from 'working from home' question or address fields
+      const ipRegex = /^\d{1,3}(?:\.\d{1,3}){3}$/;
+
+      let building = "";
+      const wfhMatch = notesText.match(/Are you working from home.*?:\s*(.+)$/im);
+      if (wfhMatch) {
+        const answer = wfhMatch[1].trim();
+        if (/yes|working from home/i.test(answer)) {
+          building = "Working from home";
+        } else if (/no/i.test(answer)) {
+          // Attempt to capture address after the word 'no'
+          const afterNo = answer.replace(/no[\s,:-]*/i, '').trim();
+          if (afterNo && !ipRegex.test(afterNo)) {
+            building = afterNo;
+          }
         }
-      } else if (extract(/Are you working from home.*?:\s*(working from home)/im, notesText)) {
-          building = "Working from home"; 
       }
-      if (!building) building = extract(/Address:\s*(.+)$/im, notesText); 
-      output.push("Building: " + (building || USER_NOT_PROVIDED));
+
+      if (!building) {
+        const notesAddr = extract(/^\s*Address:\s*(.+)$/im, notesText);
+        if (notesAddr && !ipRegex.test(notesAddr)) {
+          building = notesAddr;
+        }
+      }
+
+      if (!building) {
+        const recordAddr = extract(/^\s*Address:\s*(.+)$/im, peopleRecordText);
+        if (recordAddr && !ipRegex.test(recordAddr)) {
+          building = recordAddr;
+        }
+      }
+
+      if (!building) {
+        building = USER_NOT_PROVIDED + ". Is address in people record?";
+      }
+
+      output.push("Building: " + building);
       
       // Room/cube: Captured from notesText
       output.push("Room/cube: " + (extract(/Room\/cube:\s*(.+)/i, notesText) || USER_NOT_PROVIDED));
@@ -241,7 +271,8 @@
       output.push("Exact Problem Details (Error Message): " + (problemDetails || USER_NOT_PROVIDED)); 
 
       // Troubleshooting steps: Captured from notesText
-      const troubleshootingSteps = extract(/Describe any troubleshooting steps.*?:\s*(.+)$/im, notesText); 
+      const troubleshootingStepsMatch = notesText.match(/Describe any troubleshooting steps.*?:\s*((?:.|\n)*?)(?=\s*\d+\.\s*|\s*Please Note:|---------------------------------------------------------------)/i);
+      const troubleshootingSteps = troubleshootingStepsMatch ? troubleshootingStepsMatch[1].trim() : "";
       output.push("Troubleshooting steps: " + (troubleshootingSteps || USER_NOT_PROVIDED));
 
       // Reason for escalating to tier 2.0 (Logic for inference or explicit text with new fallback)
@@ -277,6 +308,14 @@
 
       document.getElementById("cecEscalationOutput").value = output.join("\n");
       M.textareaAutoResize(document.getElementById("cecEscalationOutput"));
+    }
+
+    function clearEscalationFields() {
+      document.getElementById("peopleRecordInput").value = "";
+      document.getElementById("notesInput").value = "";
+      document.getElementById("cecEscalationOutput").value = "";
+      const fields = ["peopleRecordInput", "notesInput", "cecEscalationOutput"];
+      fields.forEach(id => M.textareaAutoResize(document.getElementById(id)));
     }
   </script>
 </body>
