--- a/NextNote_v4_fixed.html
+++ b/NextNote_v4_fixed.html
@@ -5,7 +5,7 @@
   <title>NextNote V4 Fixed - With Quill</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <link href="libs/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -94,11 +94,12 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/turndown/dist/turndown.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
-  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.0.0/dist/fuse.min.js"></script>
+  <script src="libs/marked.min.js"></script>
+  <script src="libs/turndown.min.js"></script>
+  <script src="libs/sortable.min.js"></script>
+  <script src="libs/quill.js"></script>
+  <script src="lib/fuse.js"></script>
   <script src="script.js"></script>
+  <script src="plugins/plugin-loader.js"></script>
 </body>
 </html>
