--- a/NextNote_v4_fixed.html
+++ b/NextNote_v4_fixed.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="libs/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link id="redThemeStylesheet" rel="stylesheet" href="css.css" disabled>
 </head>
 <body>
   <div id="sidebar">
