🎯 FISSIO REBRANDING: Complete Legal Protection!
📐 FISSIO PROFESSIONAL DIAGRAM LIBRARY:
- Rebranded from 'Visio' to 'Fissio' for legal protection
- Unique identity: 'Fiss' (fissure/break) + 'io' (input/output)
- Fits perfectly with 'NextNote' brand philosophy
- 50+ Professional diagram templates remain FREE

🎨 BRANDING CHANGES:
- Plugin name: VisioLibrary → FissioLibrary
- File name: plugin-visio-library.js → plugin-fissio-library.js
- CSS classes: visio-* → fissio-*
- Functions: showVisioLibrary → showFissioLibrary
- UI elements: 'Visio Library' → 'Fissio Library'
- Color scheme: Microsoft blue → Unique indigo (#6366f1)

🔒 LEGAL PROTECTION:
- No Microsoft trademarks used
- Original naming and branding
- Professional diagram library positioning
- Open source alternative to expensive tools

🎯 FISSIO MEANING:
- 'Fiss' = Fissure (crack/break) → Breaking Microsoft's monopoly
- 'io' = Input/Output → Data flow and diagrams
- 'Fissio' = Professional diagramming platform
- Fits 'NextNote' = Forward-thinking, innovative

#Fissio #OpenSource #LegalProtection #MicrosoftKiller

--- a/NextNote-OnyxEdition/NextNote.html
+++ b/NextNote-OnyxEdition/NextNote.html
@@ -198,7 +198,7 @@
       <button onclick="showCommandPalette()">🔍 Search</button>
       <button onclick="showModeSwitcher()">🎭 Modes</button>
       <button onclick="showTemplateSelector()">📋 Templates</button>
-      <button onclick="showVisioLibrary()">📐 Visio Library</button>
+      <button onclick="showFissioLibrary()">📐 Fissio Library</button>
       <div class="theme-select">
         <select id="themeSelect"></select>
       </div>
@@ -257,7 +257,7 @@
       "plugin-mindmap.js",
       "plugin-diagrambuilder.js",
       "plugin-googledrive.js",
-      "plugin-visio-library.js"
+      "plugin-fissio-library.js"
       // Add new plugin .js files here to hotload them!
     ];
     plugins.forEach(filename => {
@@ -2052,7 +2052,7 @@ Use [[Page Name]] to create links to other pages!
     window.switchToMode = switchToMode;
     window.showTemplateSelector = showTemplateSelector;
     window.createTemplateFromMode = createTemplateFromMode;
-    window.showVisioLibrary = showVisioLibrary;
+    window.showFissioLibrary = showFissioLibrary;
 
     // Plugin support functions
     window.renderSections = renderSections;
