🧙‍♂️ RITUAL MODE: Sacred Digital Temple Unleashed!
🔮 COMPREHENSIVE RITUAL MODE PLUGIN:
- 24 Sacred templates across 6 categories
- Magical journaling, sigil crafting, spell formulation
- Flame vow archive, threshold tracking, divination
- AmandaMap-style personal growth mapping

🧙‍♂️ MAGICAL JOURNALING:
- Daily Ritual Log: Morning/evening practice tracking
- Moon Phase Journal: Lunar cycle and intention setting
- Seasonal Celebrations: Wheel of the year rituals
- Dream Journal: Dream recording and interpretation
- Meditation Practice: Session insights and progress
- Energy Work Log: Chakra and energy healing

🔮 SIGIL CRAFTING:
- Sigil Generator: Create and store personal sigils
- Sigil Library: Collection of created sigils
- Sigil Activation: Charging and activation rituals
- Sigil Results: Track effectiveness and outcomes

🌌 SPELL CRAFTING:
- Spell Formulation: Create and document spells
- Spell Components: Herbs, crystals, magical ingredients
- Spell Timing: Astrological timing and correspondences
- Spell Results: Track spell effectiveness

📖 FLAME VOW ARCHIVE:
- Vow Creation: Create and document sacred vows
- Vow Tracking: Track vow progress and completion
- Vow Reflection: Reflect on vow impact and growth
- Vow Completion: Celebrate completed vows

🧭 THRESHOLD TRACKING:
- AmandaMap Style: Personal growth and transformation
- Liminal Spaces: Track transitions and threshold moments
- Integration Periods: Document integration of insights
- Transformation Timeline: Personal evolution timeline

🔮 DIVINATION:
- Tarot Readings: Card readings and interpretations
- Astrology Charts: Birth charts and astrological insights
- Rune Castings: Rune readings and interpretations
- Oracle Readings: Oracle card readings and guidance

🎨 SACRED DESIGN:
- Mystical purple gradient theme
- Sacred geometry-inspired UI elements
- Professional templates with spiritual wisdom
- Integration with existing NextNote ecosystem

💫 MERGING SACRED & STRUCTURED:
- Digital temple for modern practiti

--- a/NextNote-OnyxEdition/NextNote.html
+++ b/NextNote-OnyxEdition/NextNote.html
@@ -199,6 +199,7 @@
       <button onclick="showModeSwitcher()">🎭 Modes</button>
       <button onclick="showTemplateSelector()">📋 Templates</button>
       <button onclick="showFissioLibrary()">📐 Fissio Library</button>
+      <button onclick="showRitualMode()">🧙‍♂️ Ritual Mode</button>
       <div class="theme-select">
         <select id="themeSelect"></select>
       </div>
@@ -257,7 +258,8 @@
       "plugin-mindmap.js",
       "plugin-diagrambuilder.js",
       "plugin-googledrive.js",
-      "plugin-fissio-library.js"
+      "plugin-fissio-library.js",
+      "plugin-ritual-mode.js"
       // Add new plugin .js files here to hotload them!
     ];
     plugins.forEach(filename => {
@@ -2053,6 +2055,7 @@ Use [[Page Name]] to create links to other pages!
     window.showTemplateSelector = showTemplateSelector;
     window.createTemplateFromMode = createTemplateFromMode;
     window.showFissioLibrary = showFissioLibrary;
+    window.showRitualMode = showRitualMode;
 
     // Plugin support functions
     window.renderSections = renderSections;
