Remove floating buttons and integrate functionality into main toolbar - Remove all floating buttons from plugins (mindmap, diagram, drive, fissio, ritual) - Integrate mode buttons into organized toolbar sections - Fix layout issues that were overshadowing notebook area - Improve overall UI consistency and usability

--- a/NextNote-OnyxEdition/NextNote.html
+++ b/NextNote-OnyxEdition/NextNote.html
@@ -352,6 +352,9 @@
           <button onclick="showTemplateSelector()">📋 Templates</button>
           <button onclick="showFissioLibrary()">📐 Fissio</button>
           <button onclick="showRitualMode()">🧙‍♂️ Ritual</button>
+          <button onclick="toggleMindmapMode()">🧠 Mindmap</button>
+          <button onclick="toggleDiagramMode()">📐 Diagram</button>
+          <button onclick="toggleDriveMode()">☁️ Drive</button>
         </div>
       </div>
     </div>
