Fix plugin errors and null reference issues - Fix mindmapToggle not defined error by removing floating button references - Fix app.sections() error in saveMindmapAsNote by using window.sections - Fix saveCurrentPage null reference error by adding null checks - Fix diagram and drive plugin toggle functions - Add proper error handling for missing DOM elements - Ensure all plugins work correctly with the new toolbar system

--- a/NextNote-OnyxEdition/NextNote.html
+++ b/NextNote-OnyxEdition/NextNote.html
@@ -718,11 +718,13 @@
       
       // Show save indicator
       const saveBtn = document.querySelector('button[onclick="saveCurrentPage()"]');
-      const originalText = saveBtn.textContent;
-      saveBtn.textContent = '✓ Saved';
-      setTimeout(() => {
-        saveBtn.textContent = originalText;
-      }, 1000);
+      if (saveBtn) {
+        const originalText = saveBtn.textContent;
+        saveBtn.textContent = '✓ Saved';
+        setTimeout(() => {
+          saveBtn.textContent = originalText;
+        }, 1000);
+      }
       
       // Emit event for plugins
       if (window.NextNoteApp && window.NextNoteApp.emit) {
